# OSKernel2026-T202610486999572

./: .axconfig.toml  .gitignore  .gitmodules  Dockerfile  Makefile  oscontest-env.sh
kernel/starry-next/arceos/: Cargo.toml  Makefile
kernel/starry-next/arceos/api/arceos_posix_api/: build.rs
kernel/starry-next/arceos/api/arceos_posix_api/src/: lib.rs
kernel/starry-next/arceos/api/arceos_posix_api/src/imp/: eventfd.rs  fd_ops.rs  fs.rs  io.rs  mod.rs  net.rs  path_link.rs  pipe.rs  resources.rs  stdio.rs  sys.rs  time.rs
kernel/starry-next/arceos/api/arceos_posix_api/src/imp/io_mpx/: epoll.rs  select.rs
kernel/starry-next/arceos/api/arceos_posix_api/src/imp/pthread/: mutex.rs
kernel/starry-next/arceos/configs/: defconfig.toml  dummy.toml
kernel/starry-next/arceos/modules/axalloc/: Cargo.toml
kernel/starry-next/arceos/modules/axalloc/src/: lib.rs
kernel/starry-next/arceos/modules/axconfig/: build.rs
kernel/starry-next/arceos/modules/axfs/: Cargo.toml
kernel/starry-next/arceos/modules/axfs/src/: dev.rs  fops.rs  lib.rs  mounts.rs  root.rs
kernel/starry-next/arceos/modules/axfs/src/api/: mod.rs
kernel/starry-next/arceos/modules/axfs/src/fs/: fatfs.rs  lwext4_rust.rs  mod.rs
kernel/starry-next/arceos/modules/axhal/: linker.lds.S
kernel/starry-next/arceos/modules/axhal/src/: tls.rs  trap.rs
kernel/starry-next/arceos/modules/axhal/src/arch/loongarch64/: context.rs  trap.rs
kernel/starry-next/arceos/modules/axhal/src/arch/riscv/: context.rs  trap.rs
kernel/starry-next/arceos/modules/axlog/src/: lib.rs
kernel/starry-next/arceos/modules/axmm/src/: aspace.rs  lib.rs
kernel/starry-next/arceos/modules/axmm/src/backend/: alloc.rs  mod.rs
kernel/starry-next/arceos/modules/axnet/src/: lib.rs
kernel/starry-next/arceos/modules/axnet/src/smoltcp_impl/: addr.rs  listen_table.rs  mod.rs  tcp.rs  udp.rs
kernel/starry-next/arceos/modules/axns/src/: lib.rs
kernel/starry-next/arceos/modules/axruntime/src/: lang_items.rs
kernel/starry-next/arceos/modules/axsync/src/: mutex.rs
kernel/starry-next/arceos/modules/axtask/: Cargo.toml
kernel/starry-next/arceos/modules/axtask/src/: api.rs  run_queue.rs  task.rs  task_ext.rs  timers.rs  wait_queue.rs
kernel/starry-next/arceos/scripts/make/: config.mk
kernel/starry-next/arceos/ulib/axlibc/: build.rs
kernel/starry-next/arceos/ulib/axlibc/src/: lib.rs
(+263 files in other folders)
